# daf_speech

./: CMakeLists.txt  daf_speech.jucer
Builds/Android/: daf_speech_fixed_android.jucer  local.properties  settings.gradle
Builds/Android/app/: CMakeLists.txt  build.gradle
Builds/MacOSX/: AudioLevelLabel.cpp  AudioLevelLabel.h  DAFAudioProcessor.cpp  DAFAudioProcessor.h  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-App.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/daf_speech.xcodeproj/: project.pbxproj
Builds/MacOSX/daf_speech.xcodeproj/project.xcworkspace/xcuserdata/saguilerae.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/iOS/: DAFAudioProcessorEditor.h  DAFAudioProcessorEditor.mm  Info-AUv3_AppExtension.plist  Info-App.plist  Info-Standalone_Plugin.plist
Builds/iOS/Source/: AppIconSwitcher.swift
Builds/iOS/daf_speech.xcodeproj/: project.pbxproj
Builds/iOS/daf_speech.xcodeproj/xcshareddata/xcschemes/: daf_speech - App.xcscheme
Builds/iOS/daf_speech/Images.xcassets/AppIcon.appiconset/: Contents.json
Builds/iOS/daf_speech/Images.xcassets/DarkAppIcon.appiconset/: Contents.json
Builds/iOS/daf_speech/Images.xcassets/TransparentAppIcon.appiconset/: Contents.json
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h
Origen de DAF Speech.rtfd/: TXT.rtf
Source/: AudioLevelLabel.cpp  AudioLevelLabel.h  DAFAudioProcessor.cpp  DAFAudioProcessor.h  DAFAudioProcessorEditor.h  DAFAudioProcessorEditor.mm  Main.mm  MainComponent.cpp.Respaldo  MainComponent.h.Respaldo  PitchShifter.cpp  PitchShifter.h
(+5 files in other folders)
